build/k8s/mosquitto/production/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquitto
  namespace: production
spec:
  selector:
    matchLabels:
      app: mosquitto
  template:
    metadata:
      labels:
        app: mosquitto
    spec:
      containers:
      - name: mosquitto
        image: 887044485231.dkr.ecr.eu-west-1.amazonaws.com/mosquitto:latest
        resources:
